crates/sith_python_parser/tests/snapshots/invalid_syntax@expressions__named__missing_expression_0.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/expressions/named/missing_expression_0.py
---
## AST

```
Module(
    ModModule {
        range: 0..75,
        body: [
            Expr(
                ExprStmt {
                    range: 71..72,
                    value: Name(
                        NameExpr {
                            range: 71..72,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # There are no parentheses, so this isn't parsed as named expression.
2 | 
3 | x :=
  |   ^^ Syntax Error: Expected a statement
  |


  |
1 | # There are no parentheses, so this isn't parsed as named expression.
2 | 
3 | x :=
  |      Syntax Error: Expected a statement
  |
