crates/sith_python_parser/tests/snapshots/invalid_syntax@expressions__named__missing_expression_2.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/expressions/named/missing_expression_2.py
---
## AST

```
Module(
    ModModule {
        range: 0..87,
        body: [
            Expr(
                ExprStmt {
                    range: 61..71,
                    value: Named(
                        NamedExpr {
                            range: 62..71,
                            target: Name(
                                NameExpr {
                                    range: 62..63,
                                    id: Name("x"),
                                    ctx: Store,
                                },
                            ),
                            value: Name(
                                NameExpr {
                                    range: 68..71,
                                    id: Name("def"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            AnnAssign(
                AnnAssignStmt {
                    range: 72..87,
                    target: Call(
                        CallExpr {
                            range: 72..77,
                            func: Name(
                                NameExpr {
                                    range: 72..75,
                                    id: Name("foo"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 75..77,
                                args: [],
                                keywords: [],
                            },
                        },
                    ),
                    annotation: Name(
                        NameExpr {
                            range: 83..87,
                            id: Name("pass"),
                            ctx: Load,
                        },
                    ),
                    value: None,
                    simple: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
3 | (x :=
4 | 
5 | def foo():
  | ^^^ Syntax Error: Expected an identifier, but found a keyword 'def' that cannot be used here
6 |     pass
  |


  |
3 | (x :=
4 | 
5 | def foo():
  |     ^^^ Syntax Error: Expected ')', found name
6 |     pass
  |


  |
5 | def foo():
6 |     pass
  |     ^^^^ Syntax Error: Expected an identifier, but found a keyword 'pass' that cannot be used here
  |


  |
5 | def foo():
6 |     pass
  |          Syntax Error: unexpected EOF while parsing
  |
