crates/sith_python_parser/tests/snapshots/invalid_syntax@expressions__named__missing_expression_3.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/expressions/named/missing_expression_3.py
---
## AST

```
Module(
    ModModule {
        range: 0..112,
        body: [
            Expr(
                ExprStmt {
                    range: 100..112,
                    value: Named(
                        NamedExpr {
                            range: 101..112,
                            target: Name(
                                NameExpr {
                                    range: 101..102,
                                    id: Name("x"),
                                    ctx: Store,
                                },
                            ),
                            value: BinOp(
                                BinOpExpr {
                                    range: 107..112,
                                    left: Name(
                                        NameExpr {
                                            range: 107..108,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    op: Add,
                                    right: Name(
                                        NameExpr {
                                            range: 111..112,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
4 | (x :=
5 | 
6 | x + y
  |       Syntax Error: unexpected EOF while parsing
  |
